updated process with right copy

--- a/process.html
+++ b/process.html
@@ -283,8 +283,12 @@
                             <div class="step-header">STEP</div>
                             <div class="step-icon">4</div>
                         </div>
-                        <p>Use the bigger comb to comb the section while running water directly on hair. Comb from ends, to shaft then to root.
-                        Always detangle from the bottom up. Do not run a comb downward through dry hair that has not been detangled.</p>
+                        <p>Wash the section twice with your
+shampoo. Gently massage and
+scratch the scalp and work the
+shampoo from root to end. Always
+work shampoo using flat hands and
+fingers to keep hair from tangling.</p>
                     </div>
                 </div>
                 <div class="row steps steps-mobile">
