update footer email

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             <div class="col footer-contact cols-footer">
                 <p id="footer-c">Contact</p>
                 <p>510-697-1886</p>
-                <p><a href="mailto:info@alchemy-oil.com" target="_blank">info@alchemy-oil.com</a></p>
+                <p><a href="mailto:info@alchemyoil.com" target="_blank">info@alchemyoil.com</a></p>
             </div>
             <div class="col footer-socialmedia">
                 <p id="footer-f">Follow Us</p>
