--- a/faq.html
+++ b/faq.html
@@ -409,7 +409,7 @@
                 </div>
                 <div id="collapseFifteen" class="collapse" aria-labelledby="headingFifteen" data-parent="#accordionExample">
                     <div class="card-body faq-answer">
-                        Please email us at <a href="mailto:info@alchemy-oil.com" target="_blank">info@alchemy-oil.com</a> and title your email “Hair to Toe Guest Blog.” Provide your full name and a
+                        Please email us at <a href="mailto:info@thealchemyoil.com" target="_blank">info@thealchemyoil.com</a> and title your email “Hair to Toe Guest Blog.” Provide your full name and a
                         description of what you do and what you’d like to highlight on the blog. We ask that you keep submissions to about 1,000
                         words in length (can be shorter) and provide any social media handles and a valid phone number. Be patient with us after
                         you submit your entry. Submissions take about two weeks to read through. We will notify you by email if you are
@@ -428,7 +428,7 @@
                 </div>
                 <div id="collapseSixteen" class="collapse" aria-labelledby="headingSixteen" data-parent="#accordionExample">
                     <div class="card-body faq-answer">
-                        We do welcome ideas, please email <a href="mailto:info@alchemy-oil.com" target="_blank">info@alchemy-oil.com</a> and title your email “Blog Suggestions.” We consider all suggestions but cannot guarantee your idea will become an
+                        We do welcome ideas, please email <a href="mailto:info@thealchemyoil.com" target="_blank">info@thealchemyoil.com</a> and title your email “Blog Suggestions.” We consider all suggestions but cannot guarantee your idea will become an
                         official blog post.
                     </div>
                 </div>
@@ -460,7 +460,7 @@
                 </div>
                 <div id="collapseEighteen" class="collapse" aria-labelledby="headingEighteen" data-parent="#accordionExample">
                     <div class="card-body faq-answer">
-                        Please contact us via email at <a href="mailto:info@alchemy-oil.com" target="_blank">info@alchemy-oil.com</a> and title your email “Wholesale Inquiry.” Please provide a full name
+                        Please contact us via email at <a href="mailto:info@thealchemyoil.com" target="_blank">info@thealchemyoil.com</a> and title your email “Wholesale Inquiry.” Please provide a full name
                         or company name and a valid phone number in your email.
                     </div>
                 </div>
@@ -477,7 +477,7 @@
                 <div id="collapseNineteen" class="collapse" aria-labelledby="headingNineteen" data-parent="#accordionExample">
                     <div class="card-body faq-answer">
                         Standard Shipping: 3‒7 business days <br>
-                        Expedited Shipping: __ business days <br>
+                        Expedited Shipping: 1-3 business days <br>
                         Next Day Shipping: next business day 
                     </div>
                 </div>
@@ -559,7 +559,7 @@
                 </div>
                 <div id="collapseTwentyfour" class="collapse" aria-labelledby="headingTwentyfour" data-parent="#accordionExample">
                     <div class="card-body faq-answer">
-                        Please email us at <a href="mailto:info@alchemy-oil.com" target="_blank">info@alchemy-oil.com</a>. When sending an email, please title the email “Update Order” or “Cancel Order”
+                        Please email us at <a href="mailto:info@thealchemyoil.com" target="_blank">info@thealchemyoil.com</a>. When sending an email, please title the email “Update Order” or “Cancel Order”
                         and include the order number in the subject line. If the order has already been provided to our fulfillment center, we
                         are unable to cancel the order.
                     </div>
@@ -612,7 +612,7 @@
             <div class="col footer-contact cols-footer">
                 <p id="footer-c">Contact</p>
                 <p>510-697-1886</p>
-                <p><a href="mailto:info@alchemy-oil.com" target="_blank">info@alchemy-oil.com</a></p>
+                <p><a href="mailto:info@thealchemyoil.com" target="_blank">info@thealchemyoil.com</a></p>
             </div>
             <div class="col footer-socialmedia">
                 <p id="footer-f">Follow Us</p>
